syntax = "proto3";

package bytebase.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "v1/annotation.proto";
import "v1/common.proto";

option go_package = "github.com/bytebase/bytebase/backend/generated-go/v1";

// ServiceAccountService manages service accounts for API integrations.
service ServiceAccountService {
  // Creates a new service account.
  // For workspace-level: parent is empty, permission bb.serviceAccounts.create on workspace.
  // For project-level: parent is projects/{project}, permission bb.serviceAccounts.create on project.
  rpc CreateServiceAccount(CreateServiceAccountRequest) returns (ServiceAccount) {
    option (google.api.http) = {
      post: "/v1/{parent=projects/*}/serviceAccounts"
      body: "service_account"
      additional_bindings: {
        post: "/v1/serviceAccounts"
        body: "service_account"
      }
    };
    option (google.api.method_signature) = "parent,service_account,service_account_id";
    option (bytebase.v1.permission) = "bb.serviceAccounts.create";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Gets a service account by name.
  // Permissions required: bb.serviceAccounts.get
  rpc GetServiceAccount(GetServiceAccountRequest) returns (ServiceAccount) {
    option (google.api.http) = {get: "/v1/{name=serviceAccounts/*}"};
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.serviceAccounts.get";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Lists service accounts.
  // For workspace-level: parent is empty, permission bb.serviceAccounts.list on workspace.
  // For project-level: parent is projects/{project}, permission bb.serviceAccounts.list on project.
  rpc ListServiceAccounts(ListServiceAccountsRequest) returns (ListServiceAccountsResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=projects/*}/serviceAccounts"
      additional_bindings: {get: "/v1/serviceAccounts"}
    };
    option (google.api.method_signature) = "parent";
    option (bytebase.v1.permission) = "bb.serviceAccounts.list";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Updates a service account.
  // Permissions required: bb.serviceAccounts.update
  rpc UpdateServiceAccount(UpdateServiceAccountRequest) returns (ServiceAccount) {
    option (google.api.http) = {
      patch: "/v1/{service_account.name=serviceAccounts/*}"
      body: "service_account"
    };
    option (google.api.method_signature) = "service_account,update_mask";
    option (bytebase.v1.permission) = "bb.serviceAccounts.update";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Deletes a service account.
  // Permissions required: bb.serviceAccounts.delete
  rpc DeleteServiceAccount(DeleteServiceAccountRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/{name=serviceAccounts/*}"};
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.serviceAccounts.delete";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Restores a deleted service account.
  // Permissions required: bb.serviceAccounts.undelete
  rpc UndeleteServiceAccount(UndeleteServiceAccountRequest) returns (ServiceAccount) {
    option (google.api.http) = {
      post: "/v1/{name=serviceAccounts/*}:undelete"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.serviceAccounts.undelete";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }
}

// ServiceAccount represents an API integration account.
message ServiceAccount {
  option (google.api.resource) = {
    type: "bytebase.com/ServiceAccount"
    pattern: "serviceAccounts/{email}"
  };

  // The name of the service account.
  // Format: serviceAccounts/{email}
  string name = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The state of the service account.
  State state = 2;

  // The email of the service account.
  // For workspace-level: {name}@service.bytebase.com
  // For project-level: {name}@{project-id}.service.bytebase.com
  string email = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The display title of the service account.
  string title = 4 [(buf.validate.field).string.max_len = 200];

  // The service key for authentication. Only returned on creation or key rotation.
  string service_key = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The timestamp when the service account was created.
  google.protobuf.Timestamp create_time = 6 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// Request message for creating a service account.
message CreateServiceAccountRequest {
  // The parent resource where this service account will be created.
  // Format: projects/{project} for project-level, empty for workspace-level.
  string parent = 1 [(google.api.resource_reference) = {type: "bytebase.com/Project"}];

  // The ID to use for the service account, which will become the final component
  // of the service account's email in the format: {service_account_id}@service.bytebase.com
  // or {service_account_id}@{project-id}.service.bytebase.com
  string service_account_id = 2 [(google.api.field_behavior) = REQUIRED];

  // The service account to create.
  ServiceAccount service_account = 3 [(google.api.field_behavior) = REQUIRED];
}

// Request message for getting a service account.
message GetServiceAccountRequest {
  // The name of the service account to retrieve.
  // Format: serviceAccounts/{email}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/ServiceAccount"}
  ];
}

// Request message for listing service accounts.
message ListServiceAccountsRequest {
  // The parent resource.
  // Format: projects/{project} for project-level, empty for workspace-level.
  string parent = 1 [(google.api.resource_reference) = {type: "bytebase.com/Project"}];

  // The maximum number of service accounts to return. The service may return fewer than
  // this value.
  // If unspecified, at most 10 service accounts will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 2;

  // A page token, received from a previous `ListServiceAccounts` call.
  // Provide this to retrieve the subsequent page.
  //
  // When paginating, all other parameters provided to `ListServiceAccounts` must match
  // the call that provided the page token.
  string page_token = 3;

  // Show deleted service accounts if specified.
  bool show_deleted = 4;

  // Filter is used to filter service accounts returned in the list.
  // The syntax and semantics of CEL are documented at https://github.com/google/cel-spec
  //
  // Supported filter:
  // - name: the service account name, support "==" and ".matches()" operator.
  // - email: the service account email, support "==" and ".matches()" operator.
  //
  // For example:
  // name == "ed"
  // name.matches("ed")
  // email == "ed@service.bytebase.com"
  // email.matches("ed")
  string filter = 5;
}

// Response message for listing service accounts.
message ListServiceAccountsResponse {
  // The service accounts from the specified request.
  repeated ServiceAccount service_accounts = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

// Request message for updating a service account.
message UpdateServiceAccountRequest {
  // The service account to update.
  //
  // The service account's `name` field is used to identify the service account to update.
  // Format: serviceAccounts/{email}
  ServiceAccount service_account = 1 [(google.api.field_behavior) = REQUIRED];

  // The list of fields to update.
  // Supported fields: title, service_key (triggers key rotation)
  google.protobuf.FieldMask update_mask = 2;
}

// Request message for deleting a service account.
message DeleteServiceAccountRequest {
  // The name of the service account to delete.
  // Format: serviceAccounts/{email}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/ServiceAccount"}
  ];
}

// Request message for restoring a deleted service account.
message UndeleteServiceAccountRequest {
  // The name of the deleted service account.
  // Format: serviceAccounts/{email}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/ServiceAccount"}
  ];
}
